--- a/Demo.csproj
+++ b/Demo.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="EmptyClass1.cs" />
+    <Compile Remove="EmptyClass.cs" />
+  </ItemGroup>
 </Project>
